--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,3 +16,13 @@ jobs:
       - name: Install ARM toolchain
         run: |
           sudo apt-get update
+          sudo apt-get install -y gcc-arm-none-eabi binutils-arm-none-eabi
+
+      - name: Build ROM
+        run: make
+
+      - name: Upload ROM
+        uses: actions/upload-artifact@v4
+        with:
+          name: gba-rom
+          path: pixel.gba
