--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build GBA ROM
+name: Build and Release GBA ROM
 
 on:
   push:
@@ -31,8 +31,20 @@ jobs:
       - name: Build ROM
         run: make
 
-      - name: Upload ROM
-        uses: actions/upload-artifact@v4
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         with:
-          name: gba-rom
-          path: pixel.gba
+          tag_name: ${{ github.sha }}
+          release_name: Release ${{ github.sha }}
+          draft: false
+          prerelease: false
+          generate_release_notes: false
+
+      - name: Upload ROM to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./pixel.gba
+          asset_name: pixel.gba
+          asset_content_type: application/octet-stream
