--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,8 @@ jobs:
           release_name: Release ${{ github.sha }}
           draft: false
           prerelease: false
-          generate_release_notes: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload ROM to Release
         uses: actions/upload-release-asset@v1
@@ -38,3 +39,5 @@ jobs:
           asset_path: ./pixel.gba
           asset_name: pixel.gba
           asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
