--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           tag="build-$(git rev-parse --short HEAD)"
-          gh release create "$tag" ./pixel.gba \
+          mv pixel.gba pixel-$tag.gba
+          gh release create "$tag" ./pixel-$tag.gba \
             --title "Release $tag" \
             --notes "Automated build of commit $tag"
