--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,14 +2,16 @@ name: Build and Release GBA ROM
 
 on:
   push:
-    branches: ['master']
+    branches: ['**']      # all branches
+    tags: ['v*']          # tags starting with v
+  pull_request:
   workflow_dispatch:
 
 jobs:
-  build:
+  compile:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
 
     steps:
       - name: Checkout code
@@ -23,6 +25,36 @@ jobs:
       - name: Build ROM
         run: make
 
+      - name: Upload ROM as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: gba-rom
+          path: pixel.gba
+
+  build:
+    runs-on: ubuntu-latest
+    needs: compile
+    if: github.event_name != 'push' || !startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Download ROM artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: gba-rom
+      - run: echo "Build finished — artifact ready."
+
+  release:
+    runs-on: ubuntu-latest
+    needs: compile
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write
+
+    steps:
+      - name: Download ROM artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: gba-rom
+
       - name: Install GitHub CLI
         run: sudo apt-get install -y gh
 
@@ -30,8 +62,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          tag="build-$(git rev-parse --short HEAD)"
+          tag="${GITHUB_REF#refs/tags/}"
           mv pixel.gba pixel-$tag.gba
           gh release create "$tag" ./pixel-$tag.gba \
             --title "Release $tag" \
-            --notes "Automated build of commit $tag"
+            --notes "Automated build for tag $tag"
