--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,22 +48,34 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write
-
+  
     steps:
       - name: Download ROM artifact
         uses: actions/download-artifact@v4
         with:
           name: gba-rom
-
+  
       - name: Install GitHub CLI
         run: sudo apt-get install -y gh
-
-      - name: Create GitHub Release and Upload Asset
+  
+      - name: Create empty GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          tag="${GITHUB_REF#refs/tags/}"
+          gh release create "$tag" --title "Release $tag" --notes "Automated build for tag $tag" --draft
+  
+      - name: Upload asset to release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           tag="${GITHUB_REF#refs/tags/}"
           mv pixel.gba pixel-$tag.gba
-          gh release create "$tag" ./pixel-$tag.gba \
-            --title "Release $tag" \
-            --notes "Automated build for tag $tag"
+          gh release upload "$tag" pixel-$tag.gba
+  
+      - name: Publish Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          tag="${GITHUB_REF#refs/tags/}"
+          gh release edit "$tag" --draft=false
